finished icon button

--- a/app/mardownExamples/form/11.md
+++ b/app/mardownExamples/form/11.md
@@ -1,3 +1,33 @@
 ```javascript
+export function IconButtonFunctionOne() {
+  const colors = ["cyan", "teal", "green", "orange", "purple", "pink"];
+  const icons = [
+    SearchIcon,
+    EmailIcon,
+    DeleteIcon,
+    PhoneIcon,
+    PlusSquareIcon,
+    ChatIcon,
+  ];
 
+  return (
+    <SingleExample bg="background">
+      <VStack spacing={3} alignItems="center">
+        {colors.map((color, index) => (
+          <HStack w="100%" key={color} spacing={4} justify="flex-start">
+            <IconButton
+              key={color}
+              colorScheme={color}
+              aria-label="Start search"
+              icon={createElement(icons[index])}
+            />
+            <BasicText>
+              {color} <Mono>colorScheme</Mono>
+            </BasicText>
+          </HStack>
+        ))}
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
