--- a/app/mardownExamples/form/12.md
+++ b/app/mardownExamples/form/12.md
@@ -1,3 +1,26 @@
 ```javascript
+export function IconButtonFunctionTwo() {
+  const sizes = ["xs", "sm", "md", "lg"];
 
+  return (
+    <SingleExample bg="background">
+      <VStack spacing={3} alignItems="center">
+        {sizes.map((size, index) => (
+          <HStack w="100%" key={size} spacing={4} justify="flex-start">
+            <IconButton
+              key={size}
+              colorScheme="pink"
+              aria-label="Call a friend"
+              size={size}
+              icon={<PhoneIcon />}
+            />
+            <BasicText>
+              {size} <Mono>IconButton</Mono>
+            </BasicText>
+          </HStack>
+        ))}
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
