--- a/app/mardownExamples/form/15.md
+++ b/app/mardownExamples/form/15.md
@@ -1,3 +1,22 @@
 ```javascript
+export function IconButtonFunctionFour() {
+  const sizes = ["xs", "sm", "md", "lg"];
 
+  return (
+    <SingleExample bg="background">
+      <HStack spacing={5} alignItems="center">
+        {sizes.map((size, index) => (
+          <IconButton
+            key={size}
+            isRound
+            colorScheme="pink"
+            aria-label="Call a friend"
+            size={size}
+            icon={<ChatIcon />}
+          />
+        ))}
+      </HStack>
+    </SingleExample>
+  );
+}
 ```
