--- a/app/mardownExamples/form/h09.md
+++ b/app/mardownExamples/form/h09.md
@@ -1,3 +1,15 @@
 ```javascript
-
+export function IconButtonFunctionSix() {
+  const [hovered, setHovered] = useState(false);
+  return (
+    <SingleExample bg="background">
+      <IconButton
+        aria-label="Add item"
+        icon={hovered ? <CheckIcon /> : <AddIcon />}
+        onMouseEnter={() => setHovered(true)}
+        onMouseLeave={() => setHovered(false)}
+      />
+    </SingleExample>
+  );
+}
 ```
