--- a/app/mardownExamples/form/13.md
+++ b/app/mardownExamples/form/13.md
@@ -1,3 +1,25 @@
 ```javascript
-
+export function IconButtonFunctionThree() {
+  const variants = ["outline", "solid", "ghost", "link"];
+  return (
+    <SingleExample bg="background">
+      <VStack spacing={3} alignItems="center">
+        {variants.map((variant, index) => (
+          <HStack w="100%" key={variant} spacing={4} justify="flex-start">
+            <IconButton
+              key={variant}
+              colorScheme="cyan"
+              aria-label="Call a friend"
+              variant={variant}
+              icon={<PhoneIcon />}
+            />
+            <BasicText>
+              {variant} <Mono>variant</Mono>
+            </BasicText>
+          </HStack>
+        ))}
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
