--- a/app/mardownExamples/form/14.md
+++ b/app/mardownExamples/form/14.md
@@ -1,3 +1,24 @@
 ```javascript
+export function IconButtonFunctionFive() {
+  const [loading, setLoading] = useState(false);
+  const handleDownload = () => {
+    setLoading(true);
 
+    // Simulating a download operation. Replace with actual functionality.
+    setTimeout(() => {
+      setLoading(false);
+    }, 2000);
+  };
+  return (
+    <SingleExample bg="background">
+      <IconButton
+        isLoading={loading}
+        colorScheme="cyan"
+        aria-label="Download data"
+        icon={<DownloadIcon />}
+        onClick={handleDownload}
+      />
+    </SingleExample>
+  );
+}
 ```
