--- a/app/mardownExamples/form/16.md
+++ b/app/mardownExamples/form/16.md
@@ -1,3 +1,20 @@
 ```javascript
+export function InputFunctionOne() {
+  return (
+    <SingleExample bg="background">
+      <Stack spacing={4}>
+        <InputGroup>
+          <InputLeftAddon children="+001" />
+          <Input type="tel" placeholder="Phone number" bg="mainText" />
+        </InputGroup>
 
+        <InputGroup size="sm">
+          <InputLeftAddon children="http://" />
+          <Input placeholder="yourdomain" bg="mainText" />
+          <InputRightAddon children=".org" />
+        </InputGroup>
+      </Stack>
+    </SingleExample>
+  );
+}
 ```
