--- a/app/mardownExamples/form/17.md
+++ b/app/mardownExamples/form/17.md
@@ -1,3 +1,22 @@
 ```javascript
-
+export function InputFunctionTwo() {
+  const [visibility, setVisibility] = useState(false);
+  const handleVisibility = () => setVisibility(!visibility);
+  return (
+    <SingleExample bg="background">
+      <InputGroup size="md">
+        <Input
+          pr="4.5rem"
+          type={visibility ? "text" : "password"}
+          placeholder="Enter password"
+        />
+        <InputRightElement width="4.5rem">
+          <Button h="1.75rem" size="sm" onClick={handleVisibility}>
+            {visibility ? "Hide" : "Show"}
+          </Button>
+        </InputRightElement>
+      </InputGroup>
+    </SingleExample>
+  );
+}
 ```
