--- a/app/mardownExamples/form/18.md
+++ b/app/mardownExamples/form/18.md
@@ -1,3 +1,19 @@
 ```javascript
-
+export function InputFunctionThree() {
+  const [text, setText] = useState("");
+  const handleTextChange = (event: React.ChangeEvent<HTMLInputElement>) =>
+    setText(event.target.value);
+  return (
+    <SingleExample>
+      <HStack spacing={4} alignItems="flex-end">
+        <Text>Value: {text}</Text>
+        <Input
+          value={text}
+          onChange={handleTextChange}
+          placeholder="Sample placeholder"
+        />
+      </HStack>
+    </SingleExample>
+  );
+}
 ```
