--- a/app/mardownExamples/form/19.md
+++ b/app/mardownExamples/form/19.md
@@ -1,3 +1,19 @@
 ```javascript
-
+<Stack spacing={3} w="100%" maxWidth="400px">
+  <Input focusBorderColor="cyan" placeholder='focusBorderColor="cyan"' />
+  <Input
+    focusBorderColor="purple.300"
+    placeholder='focusBorderColor="purple.300"'
+  />
+  <Input
+    isInvalid
+    errorBorderColor="yellow.200"
+    placeholder='errorBorderColor="yellow.200"'
+  />
+  <Input
+    isInvalid
+    errorBorderColor="orange.400"
+    placeholder='errorBorderColor="orange.400"'
+  />
+</Stack>
 ```
