--- a/app/mardownExamples/form/20.md
+++ b/app/mardownExamples/form/20.md
@@ -1,3 +1,19 @@
 ```javascript
-
+<Stack spacing={3}>
+  <Input placeholder="default placeholder" />
+  <Input
+    placeholder="custom placeholder"
+    _placeholder={{ opacity: 1, color: "gray.100" }}
+  />
+  <Input
+    color="cyan"
+    placeholder="custom placeholder"
+    _placeholder={{ color: "inherit" }}
+  />
+  <Input
+    color="deeppink"
+    placeholder="custom placeholder"
+    _placeholder={{ opacity: 0.6, color: "inherit" }}
+  />
+</Stack>
 ```
