--- a/app/mardownExamples/form/h10.md
+++ b/app/mardownExamples/form/h10.md
@@ -1,3 +1,30 @@
 ```javascript
+export function InputFunctionSeven() {
+  const dataList = ["Apple", "Banana", "Cherry", "Date", "Elderberry"];
+  const [query, setQuery] = useState("");
 
+  const filteredData = dataList.filter((item) =>
+    item.toLowerCase().includes(query.toLowerCase())
+  );
+
+  return (
+    <SingleExample bg="background">
+      <VStack spacing={3}>
+        <Input
+          placeholder="Start typing to filter..."
+          value={query}
+          onChange={(event) => setQuery(event.target.value)}
+          sx={InputSettings}
+          size="sm"
+        />
+        {filteredData.map((item, index) => (
+          <VStack key={index} w="100%" spacing={0}>
+            <Box key={index}>{item}</Box>
+          </VStack>
+        ))}
+      </VStack>
+      ;
+    </SingleExample>
+  );
+}
 ```
