--- a/app/mardownExamples/form/h12.md
+++ b/app/mardownExamples/form/h12.md
@@ -1,3 +1,38 @@
 ```javascript
-
+export function InputFunctionNine() {
+  const [password, setPassword] = useState("");
+  const passwordStrength =
+    password.length * 10 > 100 ? 100 : password.length * 10;
+  return (
+    <SingleExample bg="background">
+      <Box>
+        <Input
+          type="password"
+          placeholder="Enter password"
+          value={password}
+          onChange={(e) => setPassword(e.target.value)}
+        />
+        <Progress
+          mt={2}
+          value={passwordStrength}
+          colorScheme={
+            passwordStrength < 30
+              ? "red"
+              : passwordStrength < 70
+              ? "yellow"
+              : "green"
+          }
+        />
+        <Text mt={2} fontSize="sm">
+          {passwordStrength < 30
+            ? "Weak"
+            : passwordStrength < 70
+            ? "Good"
+            : "Strong"}{" "}
+          Password
+        </Text>
+      </Box>
+    </SingleExample>
+  );
+}
 ```
