--- a/app/mardownExamples/form/h11.md
+++ b/app/mardownExamples/form/h11.md
@@ -1,3 +1,42 @@
 ```javascript
+export function InputFunctionEight() {
+  const [inputValue, setInputValue] = useState("");
+  const [filteredSuggestions, setFilteredSuggestions] = useState<string[]>([]);
 
+  const handleInputChange = (event: React.ChangeEvent<HTMLInputElement>) => {
+    const userInput = event.target.value;
+
+    const newFilteredSuggestions = suggestions.filter(
+      (suggestion) =>
+        suggestion.toLowerCase().indexOf(userInput.toLowerCase()) > -1
+    );
+
+    setInputValue(userInput);
+    setFilteredSuggestions(newFilteredSuggestions);
+  };
+
+  return (
+    <SingleExample bg="background">
+      <VStack w="100%" spacing={5}>
+        <Input
+          type="text"
+          onChange={handleInputChange}
+          value={inputValue}
+          placeholder="Start typing..."
+          sx={InputSettings}
+          size="sm"
+        />
+        <VStack w="100%" spacing={0} h="110px">
+          {filteredSuggestions.length && (
+            <List>
+              {filteredSuggestions.map((suggestion, index) => (
+                <ListItem key={index}>{suggestion}</ListItem>
+              ))}
+            </List>
+          )}
+        </VStack>
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
