finished number input and fixed footer

--- a/app/mardownExamples/form/h15.md
+++ b/app/mardownExamples/form/h15.md
@@ -1,3 +1,53 @@
 ```javascript
+export function NumberInputFunctionEight() {
+  const [celsius, setCelsius] = useState(0);
+  const [fahrenheit, setFahrenheit] = useState(32);
 
+  const handleCelsiusChange = (value: string) => {
+    setCelsius(Number(value));
+    setFahrenheit((Number(value) * 9) / 5 + 32);
+  };
+
+  const handleFahrenheitChange = (value: String) => {
+    setFahrenheit(Number(value));
+    setCelsius((Number(value) * 5) / 9);
+  };
+
+  return (
+    <SingleExample>
+      <VStack w="100%" spacing={4}>
+        <HStack w="100%" spacing={3} justify="center">
+          <NumberInput
+            size="sm"
+            value={celsius}
+            onChange={handleCelsiusChange}
+            maxWidth="100px"
+          >
+            <NumberInputStepper>
+              <NumberIncrementStepper />
+              <NumberDecrementStepper />
+            </NumberInputStepper>
+            <NumberInputField />
+          </NumberInput>
+          <span>°C</span>
+        </HStack>
+        <HStack w="100%" spacing={3} justify="center">
+          <NumberInput
+            maxWidth="100px"
+            size="sm"
+            value={fahrenheit}
+            onChange={handleFahrenheitChange}
+          >
+            <NumberInputStepper>
+              <NumberIncrementStepper />
+              <NumberDecrementStepper />
+            </NumberInputStepper>
+            <NumberInputField />
+          </NumberInput>
+          <span>°F</span>
+        </HStack>
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
