--- a/app/mardownExamples/form/h13.md
+++ b/app/mardownExamples/form/h13.md
@@ -1,3 +1,41 @@
 ```javascript
+export function NumberInputFunctionSix() {
+  const [fontSize, setFontSize] = useState(16);
 
+  const handleChange = (value: string) => {
+    setFontSize(Number(value));
+  };
+  return (
+    <SingleExample bg="background">
+      <VStack w="100%">
+        <NumberInput
+          w="100px"
+          value={fontSize}
+          size="sm"
+          onChange={handleChange}
+          min={10}
+          max={35}
+        >
+          <NumberInputField />
+          <NumberInputStepper>
+            <NumberIncrementStepper />
+            <NumberDecrementStepper />
+          </NumberInputStepper>
+        </NumberInput>
+        <Flex
+          w="100%"
+          bg="mainText"
+          color="background"
+          borderRadius="md"
+          h="100px"
+          justify="center"
+          align="center"
+          p={{ base: 2, sm: 3, lg: 1 }}
+        >
+          <p style={{ fontSize: `${fontSize}px` }}>Adjustable Text Size</p>
+        </Flex>
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
