almost finished with pin input

--- a/app/mardownExamples/form/27.md
+++ b/app/mardownExamples/form/27.md
@@ -1,3 +1,33 @@
 ```javascript
+export function PinInputFunctionOne() {
+  const sizes = ["xs", "sm", "md", "lg"];
 
+  return (
+    <SingleExample bg="background">
+      <VStack alignItems="left" spacing={4}>
+        {sizes.map((size) => (
+          <Stack
+            key={size}
+            direction={["column", "row"]}
+            justify={["center", "flex-start"]}
+            align={["center", "flex-start"]}
+            spacing={[2, 4]}
+          >
+            <Box>
+              <Code fontSize={["sm", "md"]}>{`size="${size}"`}</Code>
+            </Box>
+            <HStack>
+              <PinInput size={size}>
+                <PinInputField />
+                <PinInputField />
+                <PinInputField />
+                <PinInputField />
+              </PinInput>{" "}
+            </HStack>
+          </Stack>
+        ))}
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
