--- a/app/mardownExamples/form/h17.md
+++ b/app/mardownExamples/form/h17.md
@@ -1,3 +1,75 @@
 ```javascript
+interface QuizAnswerFieldProps {
+  correctAnswer: string;
+  validateAnswer: (answer: string) => void;
+  pinValue: string;
+  setPinValue: React.Dispatch<React.SetStateAction<string>>;
+}
 
+function QuizAnswerField({
+  correctAnswer,
+  validateAnswer,
+  pinValue,
+  setPinValue,
+}: QuizAnswerFieldProps) {
+  return (
+    <HStack>
+      <PinInput
+        size="md"
+        value={pinValue}
+        onChange={setPinValue}
+        onComplete={validateAnswer}
+      >
+        {Array(correctAnswer.length)
+          .fill(null)
+          .map((_, index) => (
+            <PinInputField key={index} />
+          ))}
+      </PinInput>
+    </HStack>
+  );
+}
+
+export function PinInputFunctionTwo() {
+  const correctAnswer = "2023";
+  const [userAnswer, setUserAnswer] = useState("");
+  const [pinValue, setPinValue] = useState(""); // added this
+  const [isCorrect, setIsCorrect] = (useState < null) | (boolean > null);
+
+  const validateAnswer = (answer: string) => {
+    setUserAnswer(answer);
+    setIsCorrect(answer === correctAnswer);
+  };
+
+  const resetQuiz = () => {
+    setUserAnswer("");
+    setIsCorrect(null);
+    setPinValue("");
+  };
+
+  return (
+    <SingleExample>
+      <VStack spacing={3}>
+        <h3>In what year was this site made?</h3>
+        <QuizAnswerField
+          correctAnswer={correctAnswer}
+          validateAnswer={validateAnswer}
+          pinValue={pinValue}
+          setPinValue={setPinValue}
+        />
+        <Box h="50px">
+          {userAnswer && (
+            <Alert color="background" status={isCorrect ? "success" : "error"}>
+              <AlertIcon />
+              {isCorrect ? "Correct Answer" : "Wrong Answer"}
+            </Alert>
+          )}
+        </Box>
+        <Button size="sm" onClick={resetQuiz}>
+          Reset
+        </Button>
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
