--- a/app/mardownExamples/form/h18.md
+++ b/app/mardownExamples/form/h18.md
@@ -1,3 +1,53 @@
 ```javascript
+export function PinInputFunctionFour() {
+  const [remainingTime, setRemainingTime] = useState(23); // Set the initial countdown time
+  const [otp, setOtp] = useState("");
 
+  useEffect(() => {
+    if (remainingTime > 0) {
+      const timer = setInterval(() => {
+        setRemainingTime((prevTime) => prevTime - 1);
+      }, 1000);
+
+      return () => {
+        clearInterval(timer);
+      };
+    }
+  }, [remainingTime]);
+
+  const handleOtpChange = (value: string) => {
+    setOtp(value);
+  };
+
+  const handleReset = () => {
+    setOtp("");
+    setRemainingTime(23);
+  };
+
+  return (
+    <VStack spacing={4}>
+      <HStack>
+        <PinInput
+          value={otp}
+          onChange={handleOtpChange}
+          type="alphanumeric"
+          size="md"
+        >
+          <PinInputField />
+          <PinInputField />
+          <PinInputField />
+          <PinInputField />
+        </PinInput>
+      </HStack>
+      <Text fontSize="15px" fontWeight="bold" color="accent_2">
+        {remainingTime === 0
+          ? "Oh no! OTP expired!"
+          : `Time remaining: ${remainingTime}s`}
+      </Text>
+      <Button size="sm" onClick={handleReset}>
+        Reset
+      </Button>
+    </VStack>
+  );
+}
 ```
