--- a/app/mardownExamples/form/29.md
+++ b/app/mardownExamples/form/29.md
@@ -1,3 +1,17 @@
 ```javascript
+export function RadioFunctionOne() {
+  const [value, setValue] = useState("1");
 
+  return (
+    <SingleExample>
+      <RadioGroup onChange={setValue} value={value}>
+        <Stack direction="column">
+          <Radio value="1">Choice A</Radio>
+          <Radio value="2">Choice B</Radio>
+          <Radio value="3">Choice C</Radio>
+        </Stack>
+      </RadioGroup>
+    </SingleExample>
+  );
+}
 ```
