--- a/app/mardownExamples/form/30.md
+++ b/app/mardownExamples/form/30.md
@@ -1,3 +1,51 @@
 ```javascript
+export function RadioFunctionTwo() {
+  const colorSchemes = [
+    "whiteAlpha",
+    "blackAlpha",
+    "gray",
+    "red",
+    "orange",
+    "yellow",
+    "green",
+    "teal",
+    "blue",
+    "cyan",
+    "purple",
+    "pink",
+    "linkedin",
+    "facebook",
+    "messenger",
+    "whatsapp",
+    "twitter",
+    "telegram",
+  ];
 
+  const halfLength = Math.ceil(colorSchemes.length / 2);
+  const columnOne = colorSchemes.slice(0, halfLength);
+  const columnTwo = colorSchemes.slice(halfLength);
+
+  return (
+    <SingleExample bg="background">
+      <RadioGroup>
+        <Stack direction="row" spacing={8}>
+          <Stack direction="column">
+            {columnOne.map((colorScheme) => (
+              <Radio key={colorScheme} colorScheme={colorScheme} defaultChecked>
+                {colorScheme}
+              </Radio>
+            ))}
+          </Stack>
+          <Stack direction="column">
+            {columnTwo.map((colorScheme) => (
+              <Radio key={colorScheme} colorScheme={colorScheme} defaultChecked>
+                {colorScheme}
+              </Radio>
+            ))}
+          </Stack>
+        </Stack>
+      </RadioGroup>
+    </SingleExample>
+  );
+}
 ```
