--- a/app/mardownExamples/form/31.md
+++ b/app/mardownExamples/form/31.md
@@ -1,3 +1,20 @@
 ```javascript
-
+export function RadioFunctionThree() {
+  return (
+    <SingleExample bg="background">
+      {" "}
+      <Stack>
+        <Radio size="sm" name="1" colorScheme="pink">
+          Small Radio
+        </Radio>
+        <Radio size="md" name="1" colorScheme="purple">
+          Medium Radio
+        </Radio>
+        <Radio size="lg" name="1" colorScheme="cyan" defaultChecked>
+          Large Radio
+        </Radio>
+      </Stack>
+    </SingleExample>
+  );
+}
 ```
