--- a/app/mardownExamples/form/32.md
+++ b/app/mardownExamples/form/32.md
@@ -1,3 +1,18 @@
 ```javascript
-
+export function RadioFunctionFour() {
+  return (
+    <SingleExample bg="background">
+      {" "}
+      <RadioGroup defaultValue="3">
+        <Stack>
+          <Radio value="1" isDisabled>
+            Not Selected
+          </Radio>
+          <Radio value="2">Not Selected</Radio>
+          <Radio value="3">Selected</Radio>
+        </Stack>
+      </RadioGroup>
+    </SingleExample>
+  );
+}
 ```
