--- a/app/mardownExamples/form/34.md
+++ b/app/mardownExamples/form/34.md
@@ -1,3 +1,9 @@
 ```javascript
-
+export function RadioFunctionSix() {
+  return (
+    <SingleExample bg="background">
+      <Radio isInvalid>I have been canceled.</Radio>
+    </SingleExample>
+  );
+}
 ```
