--- a/app/mardownExamples/form/35.md
+++ b/app/mardownExamples/form/35.md
@@ -1,3 +1,80 @@
 ```javascript
+function RadioButtons(props: UseRadioProps & { children: ReactNode }) {
+  const { getInputProps, getRadioProps } = useRadio(props);
 
+  const inputProps = getInputProps();
+  const radioProps = getRadioProps();
+
+  return (
+    <Box as="label">
+      <input {...inputProps} />
+      <Box
+        {...radioProps}
+        cursor="pointer"
+        borderWidth="1px"
+        borderRadius="full"
+        w="120px"
+        textAlign="center"
+        bg="sectionColor"
+        borderColor="accent_2"
+        boxShadow="md"
+        _checked={{
+          bg: "accent_2",
+          color: "background",
+          borderColor: "accent_1",
+          fontWeight: "bold",
+        }}
+        _focus={{
+          boxShadow: "outline",
+        }}
+        px={5}
+        py={3}
+      >
+        {props.children}
+      </Box>
+    </Box>
+  );
+}
+
+export function RadioFunctionSeven() {
+  const options = ["Thor", "Chihiro", "Mononoke", "Ragnarök"];
+  const [selectedValue, setSelectedValue] = useState < string > "Ragnarök";
+  const { isOpen, onOpen, onClose } = useDisclosure();
+
+  const petAlert = (value: string) => {
+    setSelectedValue(value);
+    onOpen();
+  };
+
+  const { getRootProps, getRadioProps } = useRadioGroup({
+    name: "Pet",
+    defaultValue: "Ragnarök",
+    onChange: petAlert,
+  });
+
+  const group = getRootProps();
+
+  return (
+    <VStack {...group} spacing={4}>
+      <h2>Choose a pet:</h2>
+      {options.map((value) => {
+        const radio = getRadioProps({ value });
+        return (
+          <RadioButtons key={value} {...radio}>
+            {value}
+          </RadioButtons>
+        );
+      })}
+      <Drawer isOpen={isOpen} placement="top" onClose={onClose}>
+        <DrawerOverlay />
+        <DrawerContent bg="accent_2" color="background" textAlign="center">
+          <DrawerCloseButton />
+          <DrawerBody>
+            <h1>You chose {selectedValue}.</h1>
+          </DrawerBody>
+        </DrawerContent>
+      </Drawer>
+    </VStack>
+  );
+}
 ```
