finished range slider. much goodness within,

--- a/app/mardownExamples/form/36.md
+++ b/app/mardownExamples/form/36.md
@@ -1,3 +1,16 @@
 ```javascript
-
+export function RangeSliderFunctionOne() {
+  return (
+    <SingleExample bg="background">
+      {" "}
+      <RangeSlider defaultValue={[23, 53]}>
+        <RangeSliderTrack>
+          <RangeSliderFilledTrack />
+        </RangeSliderTrack>
+        <RangeSliderThumb index={0} />
+        <RangeSliderThumb index={1} />
+      </RangeSlider>
+    </SingleExample>
+  );
+}
 ```
