--- a/app/mardownExamples/form/41.md
+++ b/app/mardownExamples/form/41.md
@@ -1,11 +1,16 @@
 ```javascript
-export function RangeSliderFunctionTwo() {
+export function RangeSliderFunctionSix() {
+  const min = 23;
+  const max = 53;
+
+  const [selectedRange, setSelectedRange] = useState([23, 53]);
   return (
     <SingleExample bg="background">
+      {" "}
       <RangeSlider
         aria-label={["Minimum Value", "Maximum Value"]}
-        colorScheme="pink"
-        defaultValue={[20, 80]}
+        defaultValue={[min, max]}
+        onChangeEnd={(value) => setSelectedRange(value)}
       >
         <RangeSliderTrack>
           <RangeSliderFilledTrack />
@@ -13,6 +18,9 @@ export function RangeSliderFunctionTwo() {
         <RangeSliderThumb index={0} />
         <RangeSliderThumb index={1} />
       </RangeSlider>
+      <Box>
+        Selected Range: {selectedRange[0]} - {selectedRange[1]}
+      </Box>
     </SingleExample>
   );
 }
