--- a/app/mardownExamples/form/h23.md
+++ b/app/mardownExamples/form/h23.md
@@ -1,3 +1,65 @@
 ```javascript
+export function NumberRangeSlider() {
+  const [value, setValue] = useState < [number, number] > [0, 100];
+  const numbers = [10, 25, 50, 75, 90, 120, 150, 180, 200];
 
+  const handleChange = (newValue: [number, number]) => {
+    setValue(newValue);
+  };
+
+  const filterNumbers = (): number[] => {
+    const [startValue, endValue] = value;
+    return numbers.filter((number) => {
+      return number >= startValue && number <= endValue;
+    });
+  };
+
+  return (
+    <VStack w="100%" spacing={4}>
+      <Text>Current range:</Text>
+      <RangeSlider
+        min={0}
+        max={200}
+        step={10}
+        defaultValue={value}
+        onChange={handleChange}
+      >
+        <RangeSliderTrack>
+          <RangeSliderFilledTrack />
+        </RangeSliderTrack>
+        <RangeSliderThumb index={0} />
+        <RangeSliderThumb index={1} />
+      </RangeSlider>
+
+      <Box color="accent_2">
+        Selected Range: {value[0]} - {value[1]}
+      </Box>
+
+      <VStack
+        w="100%"
+        align="flex-start"
+        bg="sidebarBackground"
+        color="mainText"
+        pb={2}
+        borderRadius="md"
+      >
+        <Box
+          p={2}
+          borderTopRadius="md"
+          w="100%"
+          color="background"
+          fontWeight="bold"
+          bg="tipBackground"
+        >
+          Filtered Numbers:
+        </Box>
+        <VStack w="100%" spacing={1} h="100px" overflowY="auto">
+          {filterNumbers().map((number) => (
+            <Box key={number}>{number}</Box>
+          ))}
+        </VStack>
+      </VStack>
+    </VStack>
+  );
+}
 ```
