--- a/app/mardownExamples/form/h24.md
+++ b/app/mardownExamples/form/h24.md
@@ -1,3 +1,110 @@
 ```javascript
+interface ColorOption {
+  label: string;
+  value: string;
+}
+
+const colorOptions: ColorOption[] = [
+  { label: "Red", value: "red" },
+  { label: "Blue", value: "blue" },
+  { label: "Green", value: "green" },
+  { label: "Yellow", value: "yellow" },
+  { label: "Purple", value: "purple" },
+  { label: "Orange", value: "orange" },
+  { label: "Pink", value: "pink" },
+  { label: "Teal", value: "teal" },
+  { label: "Cyan", value: "cyan" },
+  { label: "Gray", value: "gray" },
+  { label: "Black", value: "black" },
+  { label: "White", value: "white" },
+];
+
+export function GradientBox() {
+  const [color1, setColor1] = useState<string>(colorOptions[7].value);
+  const [color2, setColor2] = useState<string>(colorOptions[6].value);
+  const [color3, setColor3] = useState<string>(colorOptions[8].value);
+  const [gradientValue, setGradientValue] = useState<number[]>([50, 75]);
+
+  const handleColor1Change = (event: React.ChangeEvent<HTMLSelectElement>) => {
+    setColor1(event.target.value);
+  };
+
+  const handleColor2Change = (event: React.ChangeEvent<HTMLSelectElement>) => {
+    setColor2(event.target.value);
+  };
+
+  const handleColor3Change = (event: React.ChangeEvent<HTMLSelectElement>) => {
+    setColor3(event.target.value);
+  };
+
+  const handleSliderChange = (value: number[]) => {
+    // Sort the values to ensure the smaller value is first
+    const sortedValues = value.sort((a, b) => a - b);
+    setGradientValue(sortedValues);
+  };
+
+  const gradientStyle: React.CSSProperties = {
+    background: `linear-gradient(to right,
+      ${color1} 0%,
+      ${color2} ${gradientValue[0]}%,
+      ${color2} ${gradientValue[1]}%,
+      ${color3} 100%)`,
+    height: "100px",
+  };
+
+  return (
+    <Box w="100%">
+      <VStack w="100%">
+        <VStack w="100%" spacing={1}>
+          <Select size="xs" value={color1} onChange={handleColor1Change} mr={2}>
+            {colorOptions.map((option) => (
+              <option key={option.value} value={option.value}>
+                {option.label}
+              </option>
+            ))}
+          </Select>
+          <Select size="xs" value={color2} onChange={handleColor2Change} mr={2}>
+            {colorOptions.map((option) => (
+              <option key={option.value} value={option.value}>
+                {option.label}
+              </option>
+            ))}
+          </Select>
+          <Select size="xs" value={color3} onChange={handleColor3Change} mr={2}>
+            {colorOptions.map((option) => (
+              <option key={option.value} value={option.value}>
+                {option.label}
+              </option>
+            ))}
+          </Select>
+        </VStack>
+
+        <Flex w="100%">
+          <RangeSlider
+            min={0}
+            max={100}
+            step={1}
+            value={gradientValue}
+            onChange={handleSliderChange}
+            width="100%"
+            mr={2}
+          >
+            <RangeSliderTrack>
+              <RangeSliderFilledTrack />
+            </RangeSliderTrack>
+            <RangeSliderThumb index={0} />
+            <RangeSliderThumb index={1} />
+          </RangeSlider>
+        </Flex>
+        <HStack w="100%" justify="space-between">
+          <Box>{gradientValue[0]}</Box>
+          <Box>{gradientValue[1]}</Box>
+        </HStack>
+      </VStack>
+
+      <Box borderRadius="md" style={gradientStyle} mb={4} />
+    </Box>
+  );
+}
 
 ```
