--- a/app/mardownExamples/form/38.md
+++ b/app/mardownExamples/form/38.md
@@ -1,3 +1,20 @@
 ```javascript
-
+export function RangeSliderFunctionThree() {
+  return (
+    <SingleExample bg="background">
+      <RangeSlider
+        aria-label={["Minimum Value", "Maximum Value"]}
+        defaultValue={[10, 90]}
+        orientation="vertical"
+        minH="32"
+      >
+        <RangeSliderTrack>
+          <RangeSliderFilledTrack />
+        </RangeSliderTrack>
+        <RangeSliderThumb index={0} />
+        <RangeSliderThumb index={1} />
+      </RangeSlider>
+    </SingleExample>
+  );
+}
 ```
