--- a/app/mardownExamples/form/39.md
+++ b/app/mardownExamples/form/39.md
@@ -1,3 +1,22 @@
 ```javascript
-
+export function RangeSliderFunctionFour() {
+  return (
+    <SingleExample bg="background">
+      <RangeSlider
+        aria-label={["Minimum Value", "Maximum Value"]}
+        defaultValue={[30, 70]}
+      >
+        <RangeSliderTrack>
+          <RangeSliderFilledTrack bg="accent_1" />
+        </RangeSliderTrack>
+        <RangeSliderThumb boxSize={6} bg="tipBackground" index={0}>
+          <Box color="background" as={RxSlider} />
+        </RangeSliderThumb>
+        <RangeSliderThumb boxSize={6} index={1} bg="tipBackground">
+          <Box color="background" as={RxSlider} />
+        </RangeSliderThumb>
+      </RangeSlider>
+    </SingleExample>
+  );
+}
 ```
