--- a/app/mardownExamples/form/40.md
+++ b/app/mardownExamples/form/40.md
@@ -1,3 +1,26 @@
 ```javascript
+export function RangeSliderFunctionFive() {
+  const [selectedRange, setSelectedRange] = useState([10, 90]);
 
+  return (
+    <SingleExample bg="background">
+      <RangeSlider
+        defaultValue={[selectedRange[0], selectedRange[1]]}
+        onChangeEnd={(value) => setSelectedRange(value)}
+        min={0}
+        max={300}
+        step={10}
+      >
+        <RangeSliderTrack bg="red.100">
+          <RangeSliderFilledTrack bg="accent_2" />
+        </RangeSliderTrack>
+        <RangeSliderThumb boxSize={6} index={0} />
+        <RangeSliderThumb boxSize={6} index={1} />
+      </RangeSlider>
+      <Box>
+        Selected Range: {selectedRange[0]} - {selectedRange[1]}
+      </Box>
+    </SingleExample>
+  );
+}
 ```
