--- a/app/mardownExamples/form/h22.md
+++ b/app/mardownExamples/form/h22.md
@@ -1,3 +1,100 @@
 ```javascript
 
+interface Person {
+  id: number;
+  name: string;
+  username: string;
+  email: string;
+}
+
+export function AlphabetRangeSlider() {
+  const [value, setValue] = useState<[number, number]>([65, 90]);
+  const [people, setPeople] = useState<Person[]>([]);
+
+  useEffect(() => {
+    fetchPeople();
+  }, []);
+
+  const handleChange = (newValue: [number, number]) => {
+    setValue(newValue);
+  };
+
+  const fetchPeople = async () => {
+    try {
+      const response = await fetch(
+        `https://jsonplaceholder.typicode.com/users`
+      );
+      const data = await response.json();
+      setPeople(data);
+    } catch (error) {
+      console.error("Error fetching people:", error);
+    }
+  };
+
+  const filterPeople = (): Person[] => {
+    const [startValue, endValue] = value;
+    return people.filter((person) => {
+      const lastName = person.name.split(" ")[1];
+      if (lastName) {
+        const lastNameFirstChar = lastName.charAt(0).toUpperCase();
+        const charCode = lastNameFirstChar.charCodeAt(0);
+        return charCode >= startValue && charCode <= endValue;
+      }
+      return false;
+    });
+  };
+
+  const getLetterFromCode = (code: number): string => {
+    return String.fromCharCode(code);
+  };
+
+  return (
+    <VStack w="100%">
+      <Text>Select a range:</Text>
+      <RangeSlider
+        min={65}
+        max={90}
+        step={1}
+        defaultValue={value}
+        onChange={handleChange}
+      >
+        <RangeSliderTrack>
+          <RangeSliderFilledTrack />
+        </RangeSliderTrack>
+        <RangeSliderThumb index={0} />
+        <RangeSliderThumb index={1} />
+      </RangeSlider>
+
+      <Box color="accent_2">
+        Selected Range: {getLetterFromCode(value[0])} -{" "}
+        {getLetterFromCode(value[1])}
+      </Box>
+      <VStack
+        w="100%"
+        align="flex-start"
+        bg="sidebarBackground"
+        color="mainText"
+        pb={2}
+        borderRadius="md"
+      >
+        <Box
+          p={2}
+          borderTopRadius="md"
+          w="100%"
+          color="background"
+          fontWeight="bold"
+          bg="tipBackground"
+        >
+          Filtered People:
+        </Box>
+        <VStack w="100%" spacing={1} h="100px" overflowY="auto">
+          {filterPeople().map((person) => (
+            <Box key={person.id}>{person.name}</Box>
+          ))}
+        </VStack>
+      </VStack>
+    </VStack>
+  );
+}
+
 ```
