--- a/app/mardownExamples/form/h25.md
+++ b/app/mardownExamples/form/h25.md
@@ -1,3 +1,26 @@
 ```javascript
+export function SelectFunctionEight() {
+  const handleSelectChange = (event: React.ChangeEvent<HTMLSelectElement>) => {
+    console.log("Selected value:", event.target.value);
+  };
 
+  return (
+    <SingleExample bg="background">
+      <Box bg="sectionColor" p={2} w="100%">
+        <Select
+          bg="accent_2"
+          fontWeight="bold"
+          borderRadius="full"
+          placeholder="Custom"
+          icon={<RxDropdownMenu />}
+          onChange={handleSelectChange}
+        >
+          <option value="option1">Option 1</option>
+          <option value="option2">Option 2</option>
+          <option value="option3">Option 3</option>
+        </Select>
+      </Box>
+    </SingleExample>
+  );
+}
 ```
