--- a/app/mardownExamples/form/h27.md
+++ b/app/mardownExamples/form/h27.md
@@ -1,3 +1,37 @@
 ```javascript
+const functionSixOptions = [
+  "Apple",
+  "Banana",
+  "Cherry",
+  "Durian",
+  "Elderberry",
+];
 
+export function SelectFunctionSix() {
+  const [filterValue, setFilterValue] = useState("");
+  const filteredOptions = functionSixOptions.filter((option) =>
+    option.toLowerCase().includes(filterValue.toLowerCase())
+  );
+
+  const handleFilterChange = (event: React.ChangeEvent<HTMLInputElement>) => {
+    setFilterValue(event.target.value);
+  };
+
+  return (
+    <SingleExample bg="background">
+      <Input
+        placeholder="Search"
+        value={filterValue}
+        onChange={handleFilterChange}
+      />
+      <Select placeholder="Select option">
+        {filteredOptions.map((option) => (
+          <option key={option} value={option}>
+            {option}
+          </option>
+        ))}
+      </Select>
+    </SingleExample>
+  );
+}
 ```
