--- a/app/mardownExamples/form/h26.md
+++ b/app/mardownExamples/form/h26.md
@@ -1,3 +1,32 @@
 ```javascript
+const functionSevenOptions = ["Red", "Green", "Blue", "Yellow"];
 
+export function SelectFunctionSeven() {
+  const [selectedOptions, setSelectedOptions] = useState<string[]>([]);
+  const handleSelectChange = (event: React.ChangeEvent<HTMLSelectElement>) => {
+    const selectedValues = Array.from(
+      event.target.selectedOptions,
+      (option) => option.value
+    );
+    setSelectedOptions(selectedValues);
+  };
+
+  return (
+    <SingleExample bg="background">
+      <Select
+        icon={<HiSelector />}
+        placeholder="Select options"
+        multiple
+        value={selectedOptions}
+        onChange={handleSelectChange}
+      >
+        {functionSevenOptions.map((option) => (
+          <option key={option} value={option}>
+            {option}
+          </option>
+        ))}
+      </Select>
+    </SingleExample>
+  );
+}
 ```
