finished slider started switch

--- a/app/mardownExamples/form/42.md
+++ b/app/mardownExamples/form/42.md
@@ -1,3 +1,52 @@
 ```javascript
+export function SliderFunctionTwo() {
+  const colorSchemes = [
+    "whiteAlpha",
+    "blackAlpha",
+    "gray",
+    "red",
+    "orange",
+    "yellow",
+    "green",
+    "teal",
+    "blue",
+    "cyan",
+    "purple",
+    "pink",
+    "linkedin",
+    "facebook",
+    "messenger",
+    "whatsapp",
+    "twitter",
+    "telegram",
+  ];
 
+  const countdown = 100;
+  let initialValue = 95;
+
+  return (
+    <SingleExample>
+      <VStack>
+        {colorSchemes.map((colorScheme) => {
+          initialValue -= 4;
+          return (
+            <VStack key={colorScheme}>
+              <Code>{`colorScheme="${colorScheme}"`}</Code>
+              <Slider
+                aria-label="slider-rainbow"
+                colorScheme={colorScheme}
+                defaultValue={countdown * (initialValue / 100)}
+              >
+                <SliderTrack>
+                  <SliderFilledTrack />
+                </SliderTrack>
+                <SliderThumb />
+              </Slider>
+            </VStack>
+          );
+        })}
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
