--- a/app/mardownExamples/form/43.md
+++ b/app/mardownExamples/form/43.md
@@ -1,3 +1,53 @@
 ```javascript
+export function SliderFunctionSix() {
+  const [sliderValue, setSliderValue] = useState(50);
 
+  const labelStyles = {
+    mt: "2",
+    ml: "-2.5",
+    fontSize: "sm",
+  };
+  return (
+    <Flex w="100%" justify="center" align="center">
+      {" "}
+      <Slider
+        aria-label="marked-slider"
+        onChange={(val) => setSliderValue(val)}
+        maxWidth="300px"
+      >
+        <SliderMark value={20} {...labelStyles}>
+          20%
+        </SliderMark>
+        <SliderMark value={40} {...labelStyles}>
+          40%
+        </SliderMark>
+        <SliderMark value={60} {...labelStyles}>
+          60%
+        </SliderMark>
+        <SliderMark value={80} {...labelStyles}>
+          80%
+        </SliderMark>
+        <SliderMark value={100} {...labelStyles}>
+          100%
+        </SliderMark>
+        <SliderMark
+          value={sliderValue}
+          borderRadius="full"
+          textAlign="center"
+          bg="accent_2"
+          color="background"
+          mt="-10"
+          ml="-5"
+          w="12"
+        >
+          {sliderValue}%
+        </SliderMark>
+        <SliderTrack>
+          <SliderFilledTrack />
+        </SliderTrack>
+        <SliderThumb />
+      </Slider>
+    </Flex>
+  );
+}
 ```
