--- a/app/mardownExamples/form/h28.md
+++ b/app/mardownExamples/form/h28.md
@@ -1,3 +1,43 @@
 ```javascript
+export function ImageGallerySlider() {
+  const [selectedImage, setSelectedImage] = useState(0);
+  const images = [
+    "https://placebear.com/300/300",
+    "http://placekitten.com/300/300",
+    "https://place-puppy.com/300x300",
+  ];
 
+  const handleSliderChange = (value: number) => {
+    setSelectedImage(value);
+  };
+
+  return (
+    <VStack w="100%" spacing={6}>
+      <Slider
+        maxWidth={{ base: "300px", sm: "400px", lg: "150px" }}
+        aria-label="image-gallery-slider"
+        defaultValue={selectedImage}
+        min={0}
+        max={images.length - 1}
+        step={1}
+        onChange={handleSliderChange}
+      >
+        <SliderTrack>
+          <SliderFilledTrack />
+        </SliderTrack>
+        {images.map((image, index) => (
+          <SliderThumb key={index} boxSize={5} bg="accent_1">
+            <Box color="background" as={FaArrowsAltH} />
+          </SliderThumb>
+        ))}
+      </Slider>
+      <Image
+        src={images[selectedImage]}
+        alt={`Image ${selectedImage + 1}`}
+        w={{ base: "250px", sm: "300px", lg: "150px" }}
+        objectFit="cover"
+      />
+    </VStack>
+  );
+}
 ```
