--- a/app/mardownExamples/form/h29.md
+++ b/app/mardownExamples/form/h29.md
@@ -1,3 +1,32 @@
 ```javascript
+export function ColorPickerSlider() {
+  const [selectedColor, setSelectedColor] = useState("#44EAFA");
 
+  const handleSliderChange = (value: number) => {
+    const hue = Math.floor((value / 100) * 360);
+    setSelectedColor(`hsl(${hue}, 100%, 50%)`);
+  };
+
+  return (
+    <VStack w="100%" spacing={5}>
+      <Slider
+        maxWidth={{ base: "300px", sm: "400px", lg: "150px" }}
+        aria-label="color-picker-slider"
+        defaultValue={0}
+        min={0}
+        max={100}
+        step={1}
+        onChange={handleSliderChange}
+      >
+        <SliderTrack>
+          <SliderFilledTrack />
+        </SliderTrack>
+        <SliderThumb boxSize={5} bg="accent_1">
+          <Box color="background" as={FaArrowsAltH} />
+        </SliderThumb>
+      </Slider>
+      <Box width="150px" height="150px" bg={selectedColor}></Box>
+    </VStack>
+  );
+}
 ```
