--- a/app/mardownExamples/form/h30.md
+++ b/app/mardownExamples/form/h30.md
@@ -1,3 +1,76 @@
 ```javascript
+export function VolumeControlSlider() {
+  const [volume, setVolume] = useState(50);
+  const [isPlaying, setIsPlaying] = useState(false);
+  const audioRef = (useRef < HTMLAudioElement) | (null > null);
 
+  const handleSliderChange = (value: number) => {
+    setVolume(value);
+    // Adjust the volume of the audio player
+    if (audioRef.current) {
+      audioRef.current.volume = value / 100;
+    }
+  };
+
+  const handlePlay = () => {
+    if (audioRef.current) {
+      audioRef.current.play();
+      setIsPlaying(true);
+    }
+  };
+
+  const handleStop = () => {
+    if (audioRef.current) {
+      audioRef.current.pause();
+      audioRef.current.currentTime = 0;
+      setIsPlaying(false);
+    }
+  };
+
+  return (
+    <VStack w="100%" spacing={8}>
+      <VStack w="100%" spacing={4}>
+        <audio ref={audioRef}>
+          <source
+            src="https://diviextended.com/wp-content/uploads/2021/10/sound-of-waves-marine-drive-mumbai.mp3"
+            type="audio/mp3"
+          />
+          Your browser does not support the audio element.
+        </audio>
+        <HStack spacing={6}>
+          <IconButton
+            aria-label="play-audio"
+            onClick={handlePlay}
+            disabled={isPlaying}
+            icon={<BsFillPlayCircleFill size={25} />}
+          >
+            Play
+          </IconButton>
+          <IconButton
+            aria-label="stop-audio"
+            onClick={handleStop}
+            disabled={!isPlaying}
+            icon={<BsStopBtnFill size={25} />}
+          >
+            Stop
+          </IconButton>
+        </HStack>
+        <Slider
+          aria-label="volume-control-slider"
+          defaultValue={volume}
+          min={0}
+          max={100}
+          step={1}
+          onChange={handleSliderChange}
+        >
+          <SliderTrack>
+            <SliderFilledTrack />
+          </SliderTrack>
+          <SliderThumb />
+        </Slider>
+        <Box w="100%">Volume: {volume}%</Box>
+      </VStack>
+    </VStack>
+  );
+}
 ```
