--- a/app/mardownExamples/form/44.md
+++ b/app/mardownExamples/form/44.md
@@ -1,3 +1,56 @@
 ```javascript
+export function SliderFunctionSeven() {
+  const [sliderValue, setSliderValue] = useState(25);
+  const [showTooltip, setShowTooltip] = useState(false);
+  const labelStyles = {
+    mt: "2",
+    ml: "-2.5",
+    fontSize: "sm",
+  };
 
+  return (
+    <Flex align="center" justify="center" w="100%">
+      <Slider
+        id="slider"
+        defaultValue={25}
+        min={0}
+        max={100}
+        onChange={(v) => setSliderValue(v)}
+        onMouseEnter={() => setShowTooltip(true)}
+        onMouseLeave={() => setShowTooltip(false)}
+        maxWidth="300px"
+      >
+        <SliderMark value={20} {...labelStyles}>
+          20%
+        </SliderMark>
+        <SliderMark value={40} {...labelStyles}>
+          40%
+        </SliderMark>
+        <SliderMark value={60} {...labelStyles}>
+          60%
+        </SliderMark>
+        <SliderMark value={80} {...labelStyles}>
+          80%
+        </SliderMark>
+        <SliderMark value={100} {...labelStyles}>
+          100%
+        </SliderMark>
+        <SliderTrack>
+          <SliderFilledTrack />
+        </SliderTrack>
+        <Tooltip
+          hasArrow
+          bg="accent_2"
+          borderRadius="full"
+          color="background"
+          placement="top"
+          isOpen={showTooltip}
+          label={`${sliderValue}%`}
+        >
+          <SliderThumb />
+        </Tooltip>
+      </Slider>
+    </Flex>
+  );
+}
 ```
